@@ -54,6 +54,8 @@ CHANGED:
       - But this doesn't mean anything right now because the Unknown Dimension doesn't exist.
     Now that we have a standard generator to power your machines, you won't need as
       many Energy Crystals. Changed the default tries to generate Gem Ore from 4 to 3.
+  No longer registers a Steel smelting recipe if Immersive Engineering or Mekanism is installed.
+  Changed the Steel smelting recipe to a Blast Furnace recipe.
 FIXED:
   Finally added the ability to get those Advancements that you couldn't get before,
     such as Fire Laser, Fire Laser the Maximum Distance, Portal, World Destroyer,
